--- a/style.css
+++ b/style.css
@@ -3,11 +3,11 @@ body {
     background-color:slategrey;
 }
 h1 {
-    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     color:white;
-    font-size: 50px;
+    font-size: 55px;
     margin-top: 40px;
-    margin-left:45px;
+    margin-left:55px;
     text-shadow: 6px 2px black;
     margin-bottom: 25px;
 }
